# rtr2

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  GEMINI.md  LICENSE  README.md  __tracked_surface.stl  conanfile.py  imgui.ini  mkdocs.yml  pyproject.toml  test_cast.cpp
conan_recipe/imguizmo/: CMakeLists.txt  conanfile.py
examples/: CMakeLists.txt  compute_buffer_add_main.cpp  framework_offline_cbox_main.cpp  framework_quickstart_main.cpp  framework_scene_main.cpp  framework_trackball_scene_main.cpp  main.cpp  offline_cbox.cpp  pbpt_cbox_roundtrip_main.cpp  shadertoy_editor.cpp  shadertoy_main.cpp  third_party.cpp
examples/editor/: bunny_cloth_smoke_driver.hpp  cloth_bunny_editor.cpp  deformable_mesh_editor.cpp  editable_shadertoy_editor.cpp  gravity_reset_editor.cpp  gravity_spin_editor.cpp  ipc_fixed_end_block_editor.cpp  ipc_hanging_bunny_editor.cpp  offline_cbox.cpp  physics_ping_pong_editor.cpp  physics_showcase_editor.cpp  plane_collision_editor.cpp  quickstart.cpp  shadertoy_editor.cpp  sine_wave_deformer.hpp  sphere_box_collision_editor.cpp  sphere_pen_collision_editor.cpp
examples/games103_lab/lab1_angry_bunny/: angry_bunny_controller.hpp  lab1_angry_bunny.cpp
examples/games103_lab/lab2_cloth/: lab2_cloth.cpp
examples/headless/: ipc_offline_preview.cpp  ipc_offline_render.cpp  ipc_offline_scene.hpp  make_video.py
examples/runtime/: gravity_reset.cpp  physics_ping_pong.cpp  shadertoy.cpp  sphere_sphere_collision.cpp  torque_spin.cpp
shaders/: CMakeLists.txt  README.md  compile_shaders.cpp  editable_shadertoy_compute.slang  hello_world.slang  shadertoy.slang  shadertoy_compute.slang  shadertoy_present.slang  test.slang  vert_buffer.slang
src/: CMakeLists.txt  image_loader.hpp  mcp_bridge_main.cpp  src-code.txt  utils.hpp  vk_application.hpp  vk_device.hpp  vk_instance.hpp  vk_memory_buffer.hpp  vk_physical_device_picker.hpp  vk_surface.hpp  vk_window.hpp
src/core/: application.hpp  buffer.hpp  command.hpp  command_pool.hpp  common.hpp  context.hpp  core-code.txt  descriptor.hpp  device.hpp  frame_context.hpp  imgui_layer.hpp  mesh.hpp  render_pipeline.hpp  renderer.hpp  shader_module.hpp  swap_chain.hpp  texture.hpp  window.hpp
src/framework/: framework.hpp
src/framework/component/: component.hpp  free_look_camera_controller.hpp  mesh_renderer.hpp  node.hpp  node_component.hpp  pbpt_light.hpp  pbpt_mesh.hpp  trackball_camera_controller.hpp
src/framework/core/: camera.hpp  camera_manager.hpp  engine.hpp  engine_config.hpp  game_object.hpp  scene.hpp  scene_graph.hpp  scene_graph_view.hpp  tick_context.hpp  types.hpp  world.hpp
src/framework/integration/: forward_scene_view_builder.hpp  pbpt_offline_render_service.cpp  pbpt_offline_render_service_stub.cpp  pbpt_scene_export_builder.hpp  pbpt_scene_importer.hpp
src/framework/world/: game_object.hpp  scene.hpp  world.hpp
src/input/: input_state.hpp  input_system.hpp  input_types.hpp
src/render/: forward_pipeline.hpp  frame_context.hpp  frame_scheduler.hpp  imgui_layer.hpp  imgui_pass.hpp  imgui_renderer.hpp  mesh.hpp  pipeline.hpp  render_graph.hpp  render_pass.hpp  renderer.hpp  resource_registries.hpp  shadertoy_pipeline.hpp
src/rhi/: buffer.hpp  common.hpp  context.hpp  descriptor.hpp  device.hpp  imgui_context.hpp  shader_module.hpp  swap_chain.hpp  texture.hpp  window.hpp
src/rtr/: rhi
src/rtr/app/: app_runtime.hpp  frame_stepper.hpp  frame_time_policy.hpp  offline_runtime.hpp
src/rtr/editor/: editor_attach.hpp  editor_capture.hpp  editor_context.hpp  editor_host.hpp  editor_panel.hpp  editor_types.hpp  hierarchy_panel.hpp  inspector_panel.hpp  logger_panel.hpp  scene_view_panel.hpp  stats_panel.hpp
src/rtr/mcp/: bridge_core.hpp
src/rtr/resource/: resource_fwd.hpp  resource_kinds.hpp  resource_manager.hpp  resource_types.hpp
src/rtr/rhi/: buffer.hpp  command.hpp  common.hpp  context.hpp  descriptor.hpp  device.hpp  dynamic_mesh.hpp  frame_constants.hpp  image_readback.hpp  imgui_context.hpp  mesh.hpp  shader_module.hpp  swap_chain.hpp  texture.hpp  window.hpp
src/rtr/utils/: event_center.hpp  image_io.hpp  image_loader.hpp  log.hpp  obj_io.hpp  obj_types.hpp
src/system/input/: input_state.hpp  input_system.hpp
src/system/render/: forward_pipeline.hpp  forward_scene_view.hpp  frame_context.hpp  frame_scheduler.hpp  mesh.hpp  pipeline.hpp  render_pass.hpp  renderer.hpp  shadertoy_pipeline.hpp
src/utils/: event_center.hpp  image_loader.hpp  obj_loader.hpp
src/vk/: vk_physical_device_picker.hpp  vk_swapchain.hpp
test/: CMakeLists.txt  event_center_test.cpp  framework_free_look_camera_controller_test.cpp  framework_pbpt_offline_render_service_test.cpp  framework_pbpt_scene_importer_test.cpp  framework_scene_graph_test.cpp  framework_trackball_camera_controller_test.cpp
test/app/: frame_timing_test.cpp  offline_runtime_test.cpp
test/editor/: editor_host_test.cpp  editor_pipeline_bridge_test.cpp  editor_scene_picking_test.cpp  editor_scene_view_overlay_test.cpp  editor_selection_test.cpp  logger_panel_test.cpp
test/mcp/: bridge_core_test.cpp
test/python/: test_rtr_mcp.py
test/resource/: resource_manager_generic_kinds_test.cpp  resource_manager_lifecycle_test.cpp
test/rhi/: dynamic_mesh_test.cpp  image_transition_test.cpp
test/utils/: event_center_test.cpp  file_loader_test.cpp  image_io_test.cpp  log_system_test.cpp  obj_io_test.cpp  obj_loader_test.cpp
tests/: CMakeLists.txt  event_center_test.cpp  framework_camera_test.cpp  framework_engine_test.cpp  framework_forward_scene_view_builder_test.cpp  framework_free_look_camera_controller_test.cpp  framework_mesh_renderer_test.cpp  framework_node_test.cpp  framework_pbpt_light_test.cpp  framework_pbpt_mesh_test.cpp  framework_pbpt_offline_render_service_stub_test.cpp  framework_pbpt_offline_render_service_test.cpp  framework_pbpt_scene_export_builder_test.cpp  framework_pbpt_scene_importer_test.cpp  framework_scene_graph_test.cpp  framework_trackball_camera_controller_test.cpp  framework_world_scene_test.cpp  input_system_test.cpp
(+582 files in other folders)
