[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rtr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "conan>=2.21.0",
    "matplotlib>=3.10.7",
    "mcp>=1.26.0,<2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.22",
    "mkdocs-static-i18n>=1.3.0",
    "numpy>=2.3.4",
    "slangtorch>=1.3.14",
    "torch>=2.9.0",
]

[project.scripts]
rtr-mcp = "rtr_mcp.server:main"

[tool.setuptools.packages.find]
include = ["rtr_mcp*"]
